<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Tip Calculator</string>
    <string name="action_settings">Settings</string>
    <string name="hello_world">Hello world!</string>
    <string name="enter_amount">Please enter the total amount</string>
    <string name="view_tip_amount">Tip Amount</string>
    <string name="fifteen_percent">15%</string>
    <string name="ten_percent">10%</string>
    <string name="twenty_percent">20%</string>

</resources>
