<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context=".MainActivity" >

    <EditText
        android:id="@+id/etEnterAmount"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentRight="true"
        android:layout_alignParentTop="true"
        android:ems="10"
        android:hint="@string/enter_amount" >

        <requestFocus />
    </EditText>

    <TextView
        android:id="@+id/tvTipAmount"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="42dp"
        android:text="@string/view_tip_amount"
        android:textAppearance="?android:attr/textAppearanceLarge" />

    <Button
        android:id="@+id/btnFifteenPct"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/etEnterAmount"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="52dp"
        android:onClick="onSubmit"
        android:text="@string/fifteen_percent" />

    <Button
        android:id="@+id/btnTenPct"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBaseline="@+id/btnFifteenPct"
        android:layout_alignBottom="@+id/btnFifteenPct"
        android:layout_toLeftOf="@+id/btnFifteenPct"
        android:onClick="onSubmit"
        android:text="@string/ten_percent" />

    <Button
        android:id="@+id/btnTwentyPct"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBottom="@+id/btnFifteenPct"
        android:layout_toRightOf="@+id/btnFifteenPct"
        android:onClick="onSubmit"
        android:text="@string/twenty_percent" />

</RelativeLayout>
